atualizar emprestimo está funcionando OK, ADICIONAR tratamento de erro